various dark mode color fixes

--- a/source/subway/css/base.css
+++ b/source/subway/css/base.css
@@ -31,6 +31,7 @@ html, body {
 	font-family: Roboto, 'Noto Sans SC', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	/* overflow-y: scroll; */
 	scrollbar-color: var(--fgSecondary) var(--bgColor);
+	background-color: var(--bgColor);
 }
 
 ::selection {
